# ubuntu_notes

./: main.cpp  test  test.sh
C_CPP/CMake/: CMake常用语法.md  README.MD  用CMake下的find_package()函数链接库.md
C_CPP/CMake/Demo1/: gcc、g++、cmake解释.md
C_CPP/CMake/Demo1/project/: CMakeLists.txt  main.cpp  mult.cpp
C_CPP/CMake/Demo2/project/: CMakeLists.txt  main.cpp
C_CPP/CMake/Demo2/project/math/: add.cpp
C_CPP/CMake/Demo3/: CMakeLists.txt  config.h  config.h.in  main.cpp
C_CPP/CMake/Demo3/math/: CMakeLists.txt  div.cpp  sub.cpp
C_CPP/CMake/code/: CMakeLists.txt  main.c  main.cpp
C_CPP/CMake/code/bulid/: CMakeCache.txt  Makefile  cmake_install.cmake
C_CPP/CPP_Primer/04.表达式/: move  move.cpp  左值右值以及std::move函数解释.md
C_CPP/CPP_Primer/12.动态内存/: 12.README.MD
Git/: config  git.md  git拉取老版本或releases稳定版本的仓库.md  repo.md
Ubuntu/: Ubuntu高效工具.md  VSCode下的SSH.md  libarchive_install.md  如何挂载磁盘.md  常用指令.md  显卡驱动问题导致无法add第二屏幕.md
Ubuntu/Doctest/: CMakeLists.txt  doctest.md
Ubuntu/FakeIt/: CMakeLists.txt  READEME.MD
linuxNote/Linux基础命令/: 01.Linux.md  02.xshell与xftp配置.md  03.vim.md  04.运行级别.md  05.用户管理.md  06.root密码找回.md  07.文件目录指令.md  08.时间.md  09.查找指令.md  10.压缩和解压指令.md  11.组管理和权限管理.md  13.crond用法.md  14.at任务调度机制.md  15.Linux磁盘分区.md  16.磁盘情况.md  17(1).NAT网络配置问题.md  17.网络配置.md  18.进程管理.md  19.服务管理.md  20.rpm管理.md  21.shell编程.md
